Style fix footer column socials sliding

--- a/lawfirm/src/main/resources/META-INF/resources/panel-styles.css
+++ b/lawfirm/src/main/resources/META-INF/resources/panel-styles.css
@@ -78,7 +78,7 @@ input:focus{
     width: 90%;
 }
 .large-message{
-    font-size: 4vh;
+    font-size: 1.5rem;
 }
 .medium-message{
     width: 40%;
